# cortex

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  local.env  pyproject.toml
.cursor/rules/: data-layer-patterns.mdc  environment-management.mdc  project-structure.mdc
api/: main.py
api/docs/: main.py
api/routers/: __init__.py  environments.py  workspaces.py
api/routers/consumers/: consumers.py  groups.py
api/routers/data/: sources.py
api/schemas/requests/: agents.py  data_sources.py  workspaces.py
api/schemas/responses/: data_sources.py  environments.py  validators.py  workspaces.py
core/: __init__.py
core/config/: execution_env.py
core/consumers/: consumer.py  groups.py
core/consumers/db/: consumer.py  group_service.py  groups.py  service.py
core/context/globals/: global.py
core/data/db/: source_service.py  sources.py
core/data/sources/: data_sources.py
core/query/engine/: base.py  factory.py  generate.py
core/semantics/: dimensions.py  joins.py  measures.py  schema.py
core/semantics/context/: consumer.py
core/semantics/metrics/: metric.py
core/stores/: connection.py
core/types/: databases.py  sql_schema.py  user_roles.py
core/workspaces/: workspace.py
core/workspaces/db/: environment.py  environment_service.py  workspace.py  workspace_service.py
core/workspaces/environments/: environment.py
cortex/: __main__.py  app.py
cortex/api/: README.md  main.py
cortex/api/dependencies/: admin_auth.py
cortex/api/docs/: meta.py
cortex/api/routers/: __init__.py  environments.py  metrics.py  preaggregations.py  query_history.py  variants.py  workspaces.py
cortex/core/: README.md  __init__.py
cortex/core/cache/: __init__.py  factory.py  keys.py  manager.py  storage.py
cortex/core/compiler/: __init__.py  composer.py  derivations.py  exceptions.py  protocols.py  resolver.py
cortex/core/config/: execution_env.py
cortex/core/consumers/: consumer.py  groups.py
cortex/core/dashboards/: README.md  dashboard.py  execution.py  transformers.py
cortex/core/doctor/: README.md  __init__.py  chief.py
cortex/core/onboarding/: onboard.py
cortex/core/query/: README.md  executor.py
cortex/core/semantics/: README.md  __init__.py  derivations.py  dimensions.py  filters.py  joins.py  measures.py  metric_extensions.py  output_formats.py  refresh_keys.py
cortex/core/services/: __init__.py  metrics.py
cortex/core/storage/: connection.py  migrations.py  store.py
cortex/core/stores/: connection.py  database.py  sqlalchemy.py
cortex/core/types/: dashboards.py  databases.py  doctor.py  sql_schema.py
cortex/core/utils/: csv_parse.py  data_sources.py  encryption.py  json.py  schema_inference.py
cortex/core/workspaces/: workspace.py
cortex/docs/content/: architecture.md  development.md  getting-started.md  multi-tenancy.md  use-cases.md
cortex/jobs/: __init__.py  __main__.py  registry.py  server.py
cortex/jobs/cache/: __init__.py  manager.py
cortex/jobs/clients/: __init__.py  api_client.py
cortex/jobs/tasks/: __init__.py  (+1 more)
cortex/sdk/: README.md  __init__.py  client.py
frontend/cortex/: .dockerignore  Dockerfile  README.md  nuxt.config.ts  package.json  tailwind.config.ts  telescope-semantic-api.json  tsconfig.json
migrations/: MIGRATION_GUIDE.md  alembic.ini
migrations/alembic/: env.py
(+483 files in other folders)
