[tool.poetry]
name = "telescope-cortex"
version = "0.0.1"
description = "Semantic Layer for Databases with optional API components"
authors = ["Nilotpal Roychowdhury <nilotpal@jointelescope.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cortex"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.10.6"
sqlalchemy = "^2.0.38"
sqlalchemy-bigquery = "^1.12.1"
psycopg = {extras = ["binary", "pool"], version = "3.2.9"}
pytz = "^2025.1"
alembic = "^1.14.1"
langgraph = "^0.6.3"
langchain = {extras = ["openai"], version = "^0.3.27"}


[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.8"}
scalar-fastapi = "^1.0.3"
secweb = "^1.18.1"

[tool.poetry.extras]
api = ["fastapi", "scalar-fastapi", "secweb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
